@@ -634,19 +634,19 @@ public class Service {
         if (cookies == null)
             return "";
         
-        String cookiePath = prop.getProperty("cookie.path", "");
+        String cookieName = prop.getProperty("cookie.name", "");
 
         // Iterate through all cookies for a Kalamar session
         for (int i = 0; i < cookies.length; i++) {
 
-            // Check the valid path (often path is not set when sent)
-            if (cookiePath != "" && cookies[i].getPath() != "" &&
-                cookies[i].getPath() != cookiePath)
+            // Check the valid name and ignore irrelevant cookies
+            if (cookieName == "") {
+                if (!cookies[i].getName().equals("kalamar")) {
+                    continue;
+                }
+            } else if (!cookies[i].getName().equals(cookieName)) {
                 continue;
-
-            // Ignore irrelevant cookies
-            if (!cookies[i].getName().matches("^kalamar(-.+?)?$"))
-                continue;
+            };
 
             // Get the value
             String b64 = cookies[i].getValue();
